samples/_failures_safe/1761466886_3243ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49b35b83.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_49b35b83.c:185:23: error: expected declaration or statement at end of input
  185 | void freeGraph(struct Graph* graph) {
      |                       ^~~~~
